--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,6 @@
       "database": "${workspaceFolder:szm-massage-kosmetik}/app/database/database.sqlite"
     }
   ],
-  "sqltools.useNodeRuntime": true
+  "sqltools.useNodeRuntime": true,
+  "nuxt.isNuxtApp": false
 }
